--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Jamese Brown
-#logo: 
+logo: C:/Users/bluja/Downloads/jamese_b.jpg
 #description:
 #show_downloads: true
 theme: jekyll-theme-minimal
