--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 #logo: docs/assets/jamese_b_img.jpg
 title: Jamese Brown
-description: [LinkedIn](www.linkedin.com/in/jamese-brown-a025a0202)
+description: ![LinkedIn](www.linkedin.com/in/jamese-brown-a025a0202)
 #show_downloads: true
 theme: jekyll-theme-minimal
