--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-logo: docs/assets/jamese_b_img.jpg
+#logo: docs/assets/jamese_b_img.jpg
 title: Jamese Brown
 #description: ![LinkedIn](www.linkedin.com/in/jamese-brown-a025a0202)
 #show_downloads: true
